<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Event &amp; Equipment Manager</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_keep">keep me logged in</string>
    <string name="login_remember">remember my credentials</string>
    <string name="login_button">Login</string>
    <string name="menu_button">menu</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_events">Events</string>
    <string name="menu_equipments">Equipments</string>
    <string name="menu_logout">Log Out</string>
    <string name="profile_username">username:</string>
    <string name="profile_type">profile type:</string>
    <string name="event_show">Show</string>
    <string name="event_from">from</string>
    <string name="event_until">until</string>
    <string name="event_add_event">add event</string>
    <string name="profile_organization">organization:</string>
    <string name="cancel_button" tools:ignore="ButtonCase">cancel</string>
    <string name="save_button">save</string>
    <string name="event_name">event name</string>
    <string name="add_equipment">add equipment</string>
    <string name="delete_event">delete event</string>
    <string name="de_assign_equipment">de-assign equipment from event</string>
    <string name="github">source: https://github.com/C4T4PHR4CT/Event_and_Equipment_Manager</string>
    <string name="event_and_equipment_manager"><![CDATA[Event & Equipment Manager]]></string>
    <string name="app_description">The purpose of this project is to help companies in the AV industry allocate resources for various events.</string>
    <string name="category">category</string>
    <string name="equipment_name">equipment name</string>
    <string name="add_event">add event</string>
    <string name="delete_equipment">delete equipment</string>
    <string name="de_assign_event">de-assign event from equipment</string>
</resources>