<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            tools:ignore="RtlHardcoded"
            android:text="@string/profile_username" />

        <TextView
            android:id="@+id/profile_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            tools:ignore="RtlHardcoded"
            android:text="@string/profile_type" />

        <TextView
            android:id="@+id/profile_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/profile_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_remember"/>

    <CheckBox
        android:id="@+id/profile_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_caching"/>

</LinearLayout>